kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: midstall
  labels:
    name: midstall
