kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midstall-ingress
  namespace: midstall
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 'midstall.com'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: midstall-website
                port:
                  number: 80
    - host: 'vista.midstall.com'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: midstall-vista
                port:
                  number: 80
